--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,42 +9,42 @@
 # 2. Store an IAM user access key in GitHub Actions secrets named `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
- 
+
 name: Deploy to Amazon ECR
- 
+
 on:
   push:
     branches: [ "main" ]
- 
+
 env:
+  AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: multitenant           # set this to your Amazon ECR repository name
-                                   
+                                    
 permissions:
   contents: read
   packages: write
- 
+
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-   
+    
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
- 
+        aws-region: ${{ env.AWS_REGION }}
+
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
- 
-   
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
 
- 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
