--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,7 +54,7 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker-compose up -d --build  $ECR_REGISTRY/$ECR_REPOSITORY .
-        docker tag $ECR_REGISTRY/$ECR_REPOSITORY $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker-compose up -d --build  multitenant .
+        docker tag multitenant:$IMAGE_TAG 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant:latest
+        docker push 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant:latest
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
