--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -10,7 +10,7 @@
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
 
-name: Deploy-to-gmazon--ECR
+name: Deploy to Amazon ECR
 
 on:
   push:
@@ -28,6 +28,11 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -39,12 +44,6 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
-
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
@@ -54,7 +53,6 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker-compose up -d --build  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker-compose up -d --build $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
