--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -17,7 +17,7 @@ on:
     branches: [ "main" ]
 
 env:
-  ECR_REPOSITORY: multitenant           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant          # set this to your Amazon ECR repository name
                                     
 permissions:
   contents: read
@@ -53,6 +53,5 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker-compose up -d --build $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker-compose up -d --build 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant:$IMAGE_TAG .
+        docker push 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant:$IMAGE_TAG
