--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -12,13 +12,14 @@
 
 name: Deploy to Amazon ECR
 
-
 on:
-  repository_dispatch:
-    types: do-something      
+  push:
+    branches: [ "main" ]
 
 env:
-  ECR_REPOSITORY: 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant          # set this to your Amazon ECR repository name
+  AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: multitenant           # set this to your Amazon ECR repository name
+  Continue with the new image? [yN]: y
                                     
 permissions:
   contents: read
@@ -39,7 +40,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -48,11 +49,16 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: latest
+        ECR_REGISTRY: 524710615827.dkr.ecr.us-east-2.amazonaws.com/multitenant
+        IMAGE_TAG: api-v1
       run: |
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker-compose up -d --build 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant:$IMAGE_TAG .
-        docker push 821125916187.dkr.ecr.us-east-2.amazonaws.com/multitenant:$IMAGE_TAG
+        sudo docker-compose -f ./test.prod.yml build
+        docker push $ECR_REGISTRY:$IMAGE_TAG
+        docker push $ECR_REGISTRY:client-v1
+        echo "image=$ECR_REGISTRY:$IMAGE_TAG >> $GITHUB_OUTPUT"
+    
+        
+    
